<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.DetailsFragment">


    <ImageView
        android:id="@+id/detailsImageView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_details_image"
        android:src="@drawable/rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/albumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_details_album_text_margin_start"
        android:layout_marginTop="@dimen/fragment_details_album_text_margin_top"
        android:fontFamily="@font/lalezar"
        android:text="@string/album_text_view"
        android:textSize="@dimen/fragment_details_album_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsImageView" />

    <TextView
        android:id="@+id/photoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_details_photo_text_margin_top"
        android:fontFamily="@font/lalezar"
        android:text="@string/photo_text_view"
        android:textSize="@dimen/fragment_details_photo_text_size"
        app:layout_constraintStart_toStartOf="@+id/albumTextView"
        app:layout_constraintTop_toBottomOf="@+id/albumTextView" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_details_title_margin_top"
        android:fontFamily="@font/lalezar"
        android:text="@string/title_text_view"
        android:textSize="@dimen/fragment_details_title_text_size"
        app:layout_constraintStart_toStartOf="@+id/photoTextView"
        app:layout_constraintTop_toBottomOf="@+id/photoTextView" />

    <TextView
        android:id="@+id/albumNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_details_album_number_margin_start"
        android:fontFamily="@font/lalezar"
        android:text="@string/album_number"
        android:textSize="@dimen/fragment_details_album_number_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/albumTextView"
        app:layout_constraintStart_toEndOf="@+id/albumTextView"
        app:layout_constraintTop_toTopOf="@+id/albumTextView" />

    <TextView
        android:id="@+id/photoNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lalezar"
        android:text="@string/photo_number"
        android:textSize="@dimen/fragment_details_photo_number_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/photoTextView"
        app:layout_constraintStart_toStartOf="@+id/albumNumber"
        app:layout_constraintTop_toTopOf="@+id/photoTextView" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fragment_details_title_margin_end"
        android:fontFamily="@font/lalezar"
        android:text="@string/title"
        android:textSize="@dimen/fragment_details_title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/photoNumber"
        app:layout_constraintTop_toTopOf="@+id/titleTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>